--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -251,15 +251,36 @@
   font-weight: 600;
   float: left;
 }
+.cart-heading .btn-clear-items{
+  text-decoration: none;
+  letter-spacing: -.015em;
+  font-size: .90em;
+  padding: .8em;
+  margin-right: 5px;
+  color: #fff;
+  background: #e57373;
+  font-weight: bold;
+  border-radius: 3px;
+  float: right;
+  text-align: right;
+  -webkit-transition: all 0.25s linear;
+  -moz-transition: all 0.25s linear;
+  -ms-transition: all 0.25s linear;
+  -o-transition: all 0.25s linear;
+  transition: all 0.25s linear;
+}
+.cart-heading .btn-clear-items:hover, .cart-heading .btn-clear-items:focus, .cart-heading .btn-clear-items:active {
+  background: #ef5350;
+}
 .cart-heading a.continue:link, .cart-heading a.continue:visited {
   text-decoration: none;
   letter-spacing: -.015em;
-  font-size: .75em;
-  padding: 1em;
+  font-size: .85em;
+  padding: .8em;
   color: #fff;
   background: #82ca9c;
   font-weight: bold;
-  border-radius: 50px;
+  border-radius: 3px;
   float: right;
   text-align: right;
   -webkit-transition: all 0.25s linear;
@@ -280,7 +301,7 @@
   transition: all 0.15s linear;
 }
 .cart-heading a.continue:hover, .cart-heading a.continue:focus, .cart-heading a.continue:active {
-  background: #f69679;
+  background: #1e88e5;
 }
 .cart-heading a.continue:hover:after, .cart-heading a.continue:focus:after, .cart-heading a.continue:active:after {
   right: -10px;
@@ -305,4 +326,151 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+/*** payment success page styles ***/
+.checkmark-circle {
+  width: 150px;
+  height: 150px;
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+}
+.checkmark-circle .background {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: #81c784;
+  position: absolute;
+}
+.checkmark-circle .checkmark {
+  border-radius: 5px;
+}
+.checkmark-circle .checkmark.draw:after {
+  -webkit-animation-delay: 100ms;
+  -moz-animation-delay: 100ms;
+  animation-delay: 100ms;
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-timing-function: ease;
+  -moz-animation-timing-function: ease;
+  animation-timing-function: ease;
+  -webkit-animation-name: checkmark;
+  -moz-animation-name: checkmark;
+  animation-name: checkmark;
+  -webkit-transform: scaleX(-1) rotate(135deg);
+  -moz-transform: scaleX(-1) rotate(135deg);
+  -ms-transform: scaleX(-1) rotate(135deg);
+  -o-transform: scaleX(-1) rotate(135deg);
+  transform: scaleX(-1) rotate(135deg);
+  -webkit-animation-fill-mode: forwards;
+  -moz-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+}
+.checkmark-circle .checkmark:after {
+  opacity: 1;
+  height: 75px;
+  width: 37.5px;
+  -webkit-transform-origin: left top;
+  -moz-transform-origin: left top;
+  -ms-transform-origin: left top;
+  -o-transform-origin: left top;
+  transform-origin: left top;
+  border-right: 6px solid white;
+  border-top: 6px solid white;
+  border-radius: 2.5px !important;
+  content: '';
+  left: 12px;
+  top: 55px;
+  position: absolute;
+}
+
+@-webkit-keyframes checkmark {
+  0% {
+    height: 0;
+    width: 0;
+    opacity: 1;
+  }
+  20% {
+    height: 0;
+    width: 37.5px;
+    opacity: 1;
+  }
+  40% {
+    height: 75px;
+    width: 37.5px;
+    opacity: 1;
+  }
+  100% {
+    height: 75px;
+    width: 37.5px;
+    opacity: 1;
+  }
+}
+@-moz-keyframes checkmark {
+  0% {
+    height: 0;
+    width: 0;
+    opacity: 1;
+  }
+  20% {
+    height: 0;
+    width: 37.5px;
+    opacity: 1;
+  }
+  40% {
+    height: 75px;
+    width: 37.5px;
+    opacity: 1;
+  }
+  100% {
+    height: 75px;
+    width: 37.5px;
+    opacity: 1;
+  }
+}
+@keyframes checkmark {
+  0% {
+    height: 0;
+    width: 0;
+    opacity: 1;
+  }
+  20% {
+    height: 0;
+    width: 37.5px;
+    opacity: 1;
+  }
+  40% {
+    height: 75px;
+    width: 37.5px;
+    opacity: 1;
+  }
+  100% {
+    height: 75px;
+    width: 37.5px;
+    opacity: 1;
+  }
+}
+.success-message-block, .error-message-block{
+  min-height:100vh;
+  top: 15vh;
+  position: relative;
+  text-align: center;
+}
+.success-message-block .checkmark-circle{
+  margin-left: 40px;
+}
+.success-message-block h2, .error-message-block h2{
+  font-size: 38px;
+  font-weight: 600;
+  color: #696464;
+}
+.success-message-block h4, .error-message-block h4{
+  font-size: 26px;
+  font-weight: 500;
+  color: #696464;
+}
+.error-message-block h1{
+  font-size: 150px;
 }
