fixed issues in header, cart and dynamic links of commerical courses in footer

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -57,7 +57,10 @@
     -moz-border-radius: 6px 0 6px 6px;
     border-radius: 6px 0 6px 6px;
 }
-.dropdown-menu li{
+.navbar-nav .dropdown-menu{
+  margin: 0;
+}
+.dropdown-menu li a{
   padding: 8px 15px;
 }
 .dropdown-menu li a{
@@ -67,17 +70,32 @@
 .btn-group:hover #dropdown-menu {
     display: block;
 }
+.btn-group:hover #facilities-dropdown-menu{
+    display: block;
+}
 @media (min-width: 992px){
   .navbar-nav .dropdown-toggle-split{
       padding-left: 0 !important;
   }
 }
-.navbar-nav #dropdown-menu{
-  min-width: 150%;
+.btn-transperant{
+  background-color: transparent;
 }
-.navbar-nav .dropdown-menu ul li{
-  min-width: 150%;
+.active-toggle{
+  background-color: #fff !important;
+  color: #018abd !important;
 }
+header .dropdown-menu li a{
+     text-decoration: none;
+     display: block;
+     width: 100%;
+     height: 100%;
+}
+header .dropdown-menu li a:hover,header .dropdown-menu li a:focus{
+  background-color: #018abd;
+  color: #fff !important;
+}
+
 /* cart styles */
 #course-cart{
   margin: 0 0 25px 30px;
@@ -137,7 +155,7 @@
   margin-top: -45px;
 }
 
-/* Column headers */
+/* cart page Column headers */
 .column-labels label {
   padding-bottom: 15px;
   margin-bottom: 15px;
