contact form category dependent course dropdown and map pin point is changed, footer changes and sample pdf download

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -604,8 +604,11 @@ header .dropdown-menu li a:hover,header .dropdown-menu li a:focus{
   background-color: #e0e0e0;
 }
 /** course details styles**/
-.course-information-page{
-  min-height: 125vh;
+#course-details{
+  margin-bottom: 30px;
+}
+#course-details .menu-list{
+  padding-bottom: 50px;
 }
 #menu-content a{
      text-decoration: none;
